# accelerated_cctv

./: README.md  REQ.md  TODO.md  cuda_cctv_kernels.cu  cuda_encoder.py  requirements.txt
.github/: copilot-instructions.md
docs/: gpu.md  requirements.md  zero_copy.md
libs/: __init__.py
libs/gpu/: detect.py
libs/plugins/: __init__.py  loader.py  loader.py.new
plugins/: README.md  __init__.py
plugins/samples/: __init__.py
plugins/samples/notify/: README.md  main.py  plugin.yaml
plugins/samples/notify/go_worker/: main.go
plugins/samples/onvif/: README.md  main.go  main.py  plugin.yaml
plugins/samples/tests/: __init__.py  test_notify_plugin.py  test_onvif_plugin.py
plugins/transcode/gstreamer_zero_copy/: README.md  plugin.yaml
scripts/dev/: run_zero_copy_demo.sh
services/compute/native_worker/: CMakeLists.txt  README.md  main.cpp
tests/: test_gpu_detect.py  test_plugin_loader.py
web/: mjpeg_server.py
